# IduEdu

./: .buildinfo  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  benchmarks.html  genindex.html  index.html  migration_to_urban_graph.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: benchmarks.doctree  index.doctree  migration_to_urban_graph.doctree
.doctrees/__intersphinx_cache__/: geopandas_objects.inv
.doctrees/api/: graph_data_model.doctree  high_level.doctree  matrices.doctree  overpass.doctree  transport_registry.doctree  utilities.doctree
.doctrees/examples/: calc_adj_matrix.doctree  connectivity.doctree  get_any_graph.doctree  graph_operations.doctree  index.doctree  objects_and_nearest_nodes.doctree  shortest_paths.doctree  transport_registry.doctree  urban_graph_basics.doctree
.github/workflows/: check_version.yml  ci.yml  ci_pipeline.yml  docs.yml  format.yml  quality.yml  release.yml
_modules/: index.html
_modules/iduedu/constants/: transport_specs.html
_modules/iduedu/graph/: components.html  editors.html  graph_inputs.html  io.html  shortest_paths.html  urban_graph.html  validation.html
_modules/iduedu/graph_builders/: drive_walk_builders.html  intermodal_builders.html  public_transport_builders.html
_modules/iduedu/modules/: drive_walk_builders.html  graph_transformers.html  intermodal_builders.html  overpass_downloaders.html  public_transport_builders.html
_modules/iduedu/modules/graph_builders/: drive_walk_builders.html  intermodal_builders.html  public_transport_builders.html
_modules/iduedu/modules/matrix/: matrix_builder.html
_modules/iduedu/modules/overpass/: overpass_downloaders.html
_modules/iduedu/overpass/: downloaders.html
_sources/: index.md.txt
_sources/api/: high_level.rst.txt  matrices.rst.txt  overpass.rst.txt  transport_registry.rst.txt
_sources/examples/: calc_adj_matrix.ipynb.txt  get_any_graph.ipynb.txt  graph_operations.ipynb.txt  index.rst.txt  objects_and_nearest_nodes.ipynb.txt  urban_graph_basics.ipynb.txt
api/: graph_data_model.html  high_level.html  matrices.html  overpass.html  transport_registry.html  utilities.html
dev/: dev.ipynb
docs/: benchmarks.md  conf.py  index.md  migration_to_urban_graph.md  requirements.txt
docs/api/: graph_data_model.rst  high_level.rst  index.rst  matrices.rst  overpass.rst  utilities.rst
docs/examples/: calc_adj_matrix.ipynb  connectivity.ipynb  get_any_graph.ipynb  index.rst  shortest_paths.ipynb  transport_registry.ipynb
examples/: calc_adj_matrix.html  calc_adj_matrix.ipynb  connectivity.html  get_any_graph.html  get_any_graph.ipynb  graph_operations.html  index.html  objects_and_nearest_nodes.html  shortest_paths.html  transport_registry.html  urban_graph_basics.html
iduedu/: __init__.py  _api.py  config.py
iduedu/_numba/: __init__.py  components.py  csr.py  shortest_paths.py
iduedu/constants/: __init__.py  highway_enums.py  network_enums.py  transport_specs.py
iduedu/graph/: __init__.py  adapters.py  adjacency.py  components.py  editors.py  graph_editor.py  graph_inputs.py  graph_search.py  graph_transformers.py  graph_weights.py  io.py  numba_graph.py  numba_search.py  nx_graph_utils.py  nx_utils.py  shortest_paths.py  transformers.py  urban_graph.py  validation.py
iduedu/graph_builders/: drive_walk_builders.py  intermodal_builders.py  public_transport_builders.py
iduedu/matrix/: matrix_builder.py  numba_csr_matrix.py
iduedu/modules/: graph_transformers.py
iduedu/overpass/: cache.py  downloaders.py  overpass_cache.py  overpass_downloaders.py  overpass_parsers.py  parsers.py
iduedu/routing/: __init__.py  graph_search.py  graph_weights.py  numba_search.py
paper2026/: .gitignore  README.md  iduedu_paper_ru.tex  requirements-bench.txt  sample-base.bib
paper2026/benchmarks/: bench_build.py  bench_common.py  bench_intermodal.py  bench_od.py  bench_validity.py  run_all.py
paper2026/figures/: paper_figures.ipynb
paper2026/results/: build_benchmark.csv  env_build.json  env_intermodal.json  env_od_rect.json  env_od_square.json  env_validity.json  intermodal_benchmark.csv  od_benchmark.csv
scripts/: check_version.py  sync_version.py
src/iduedu/: __init__.py  _api.py  _config.py  api.py  dev.ipynb  facade.py
src/iduedu/constants/: transport_specs.py
src/iduedu/enums/: __init__.py  dictionarized_enum.py  drive_enums.py  enums.py  network_enums.py  pt_enums.py
src/iduedu/modules/: __init__.py  downloaders.py  drive_walk_builder.py  drive_walk_builders.py  graph_builder.py  graph_transformer.py  graph_transformers.py  intermodal_builder.py  intermodal_builders.py  matrix_builder.py  overpass_cache.py  overpass_downloaders.py  overpass_parsers.py  pt_walk_joiner.py  public_transport_builder.py  public_transport_builders.py  routes_parser.py
src/iduedu/modules/graph_builders/: drive_walk_builders.py  intermodal_builders.py  public_transport_builders.py
src/iduedu/modules/matrix/: matrix_builder.py  numba_csr_matrix.py
src/iduedu/modules/overpass/: overpass_cache.py  overpass_downloaders.py  overpass_parsers.py
src/iduedu/utils/: utils.py
src/tests/: conftest.py  test_config.py  test_downloaders.py  test_graphs.py  test_matrix.py  test_transport_specs.py  test_utils.py
tests/: conftest.py  factories.py  test_adapters_unit.py  test_adjacency_unit.py  test_components_transformers_unit.py  test_config.py  test_config_unit.py  test_downloaders_network.py  test_editors_unit.py  test_graph_builders_network.py  test_graph_builders_unit.py  test_graphs.py  test_intermodal_builders_unit.py  test_matrix_network.py  test_numba_unit.py  test_nx_utils_network.py  test_nx_utils_unit.py  test_overpass_cache_unit.py  test_overpass_downloaders_unit.py  test_overpass_parsers_unit.py  test_public_transport_builders_unit.py  test_shortest_paths_unit.py  test_transport_specs_unit.py  test_urban_graph_io_unit.py  test_urban_graph_methods_unit.py  test_urban_graph_unit.py  test_utils.py
