[tool.poetry]
name = "iduedu"
version = "1.0.4"
license = "BSD-3-Clause"
description = "IduEdu is a Python package for the creation and manipulation of complex city networks from OpenStreetMap."
authors = ["DDonnyy <63115678+DDonnyy@users.noreply.github.com>"]
readme = "README.md"

packages = [{ include = "iduedu", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
tqdm = "^4.67.0"
numpy = "^2.2.0"
pandas = "^2.3.0"
geopandas = "^1.1.0"
networkx = "^3.5.0"
loguru = "^0.7.3"
scipy = "^1.16.0"
numba = "^0.61.0"


[tool.poetry.group.dev.dependencies]
pyarrow = "^19.0.1"
black = "^25.9.0"
pylint = "^3.3.5"
isort = "^6.1.0"
jupyter = "^1.1.1"
pre-commit = "^4.3.0"
# For maps visualization
folium = "^0.19.5"
matplotlib = "^3.10.1"
mapclassify = "^2.8.1"
contextily = "^1.6.2"
# tests
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0.0"
furo = "^2025.9.25"
myst-nb = "^1.1.0"
sphinx-autodoc-typehints = "^3.2.0"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.pylint.format]
max-line-length = 120
expected-line-ending-format = "LF"
max-locals = 20
extension-pkg-allow-list = ["networkit"]
disable = [
    "duplicate-code",
    "missing-module-docstring",
    "missing-function-docstring",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-arguments",
    "cyclic-import",
    "line-too-long",
    "too-many-return-statements",
    "too-many-positional-arguments"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
split_on_trailing_comma = true
skip = ["__init__.py"]
