[project]
name = "iduedu"
version = "1.2.1"
description = "IduEdu is a Python package for the creation and manipulation of complex city networks from OpenStreetMap."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
authors = [
    { name = "DDonnyy", email = "63115678+DDonnyy@users.noreply.github.com" },
]
dependencies = [
    "geopandas>=1.1.0,<2.0.0",
    "loguru>=0.7.3,<0.8.0",
    "numba>=0.65.0,<0.66.0",
    "numpy>=2.4.0,<3.0.0",
    "pandas>=3.0.0,<4.0.0",
    "requests>=2.34.0,<3.0.0",
    "scipy>=1.17.0,<2.0.0",
    "tqdm>=4.68.0,<5.0.0",
]

[dependency-groups]
dev = [
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "notebooks" },
    { include-group = "test" },
    { include-group = "viz" },
    "pre-commit>=4.3.0,<5.0.0",
    "pyarrow>=19.0.1,<20.0.0",
]
docs = [
    "furo>=2025.9.25,<2026.0.0",
    "myst-nb>=1.1.0,<2.0.0",
    "sphinx>=8.0.0,<9.0.0",
    "sphinx-autodoc-typehints>=3.2.0,<4.0.0",
    "sphinx-copybutton>=0.5.2,<0.6.0",
    "sphinx-design>=0.6.0,<0.7.0",
]
lint = [
    "black>=25.9.0,<26.0.0",
    "isort>=6.1.0,<7.0.0",
    "pylint>=3.3.5,<4.0.0",
]
notebooks = [
    "jupyter>=1.1.1,<2.0.0",
]
test = [
    "pytest>=8.3.5,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
]
viz = [
    "contextily>=1.6.2,<2.0.0",
    "folium>=0.19.5,<0.20.0",
    "mapclassify>=2.8.1,<3.0.0",
    "matplotlib>=3.10.1,<4.0.0",
]


[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iduedu"]

[tool.hatch.build.targets.sdist]
include = [
    "/iduedu",
    "/LICENSE.txt",
    "/README.md",
    "/pyproject.toml",
]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.pylint.format]
max-line-length = 120
expected-line-ending-format = "LF"
max-locals = 20
extension-pkg-allow-list = ["networkit"]
disable = [
    "duplicate-code",
    "missing-module-docstring",
    "missing-function-docstring",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-arguments",
    "cyclic-import",
    "line-too-long",
    "too-many-return-statements",
    "too-many-positional-arguments"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
split_on_trailing_comma = true
skip = ["__init__.py"]

[tool.coverage.run]
branch = true
source = ["iduedu"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pragma: no branch",
]

[tool.pytest.ini_options]
markers = [
    "unit: fast tests that do not touch network or external services",
    "integration: tests that exercise several package layers together",
    "network: tests that may call Overpass or depend on cached downloaded data",
    "slow: tests that are slow enough to be excluded from tight feedback loops",
    "numba: tests that execute numba kernels",
]
